# CoreGaurdian

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
coregaurdian/: __init__.py  analyzer.py  cli.py  reporter.py  symbolicate.py  utils.py
coregaurdian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_basic.py
