[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coregaurdian"
version = "0.1.0"
description = "Kernel crash analysis helper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
coregaurdian = "coregaurdian.cli:main"